Add a README to the file

--- a/pom.xml
+++ b/pom.xml
@@ -96,4 +96,4 @@
         </plugins>
     </build>
 </project>
-        <!--postgresql-objective-38741 //  postgresql-round-49717 -->
+        <!--postgresql-horizontal-79704  //  postgresql-defined-50119  -->
